--- a/styles.css
+++ b/styles.css
@@ -9,23 +9,119 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
 body {
-    background-color: white;
-}
-/* body {
-    background-image: url(./assets/bg.jpg);
-    background-size: cover;
-    overflow: hidden;
-    background-repeat: no-repeat;
-}
-
-ul {
-    list-style: none;
+    background-color:#4ABDAC;
+    font-family: 'Montserrat';
+    height: 100vh;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+form {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-li {
-    padding: 150px;
-    margin: 25px;
-    border-style: solid;
-} */
+form span {
+    font-size: 35px;
+    color: white;
+    text-align: center;
+}
+
+#formBreakLengthHours, #formBreakLengthMinutes {
+    height: 50px;
+    background-color: lightpink;
+    border-radius: 50px;
+    border-style: none;
+    text-align: center;
+    font-size: 20px;
+}
+#formBreakLengthHours {
+    margin: 20px 0px 10px;
+}
+#formBreakLengthMinutes {
+    margin: 10px 0px 20px;
+}
+
+#breakTime {
+    color: white;
+    text-transform: uppercase;
+    background: slateblue;
+    padding: 30px;
+    border-radius: 50px;
+    border: black dotted;
+    transition: all 0.4s ease 0s;
+    font-size: 20px;
+}
+
+#breakTime:hover {
+    cursor: pointer;
+    text-shadow: 0px 0px 50px rgba(255, 255, 255, 1);
+}
+
+.defaults {
+    display: flex;
+    justify-content: center;
+}
+
+.defaults button, #add {
+    margin: 20px;
+    color: lightslategray;
+    text-transform: uppercase;
+    background:white;
+    padding: 15px;
+    border: 4px solid lightslategray;
+    transition: all 0.4s ease 0s;
+    width: 15vw;
+}
+
+#add {
+    margin-top: 0;
+}
+
+.defaults button:hover, #add:hover {
+    background-color: yellow;
+    cursor: pointer;
+}
+
+.countdown {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+h1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 40px;
+    font-weight: 900;
+    color: white;
+    letter-spacing: 2.5px;
+}
+
+.hideAtEnd {
+    text-align: center;
+}
+.endTime {
+    font-size: 25px;
+    color: rgb(88, 7, 194);
+    text-align: center;
+}
+
+.backToWork {
+    display: none;
+}
+
+@media (max-width: 690px) {
+    .defaults {
+        flex-direction: column;
+    }
+
+    .defaults button, #add {
+        width: 150px;
+        /* font-size: 15px; */
+    }
+}
