--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color:#EF8751;
     padding: 5%;
     border-radius: 50px;
@@ -126,6 +130,23 @@ h1 {
 .backToWork {
     display: none;
 }
+
+
+.loader {
+    display: none;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 
 @media (max-width: 690px) {
     .defaults {
